# yew-rust

./: .env  .gitignore  Cargo.toml
sql/: add_drug.sql  add_user.sql  get_drug.sql
sql/drug/: add_drug.sql  get_all_drug.sql  get_drug.sql  search_drug_name.sql
sql/medicine/: delete_medicine.sql  get_medicine_detail.sql  insert_medicine.sql  like_search.sql  search_medicine.sql  update_medicine.sql
sql/purchase/: add_purchase.sql  get_purchase.sql
sql/purchase_detail/: add_detail.sql  get_detail.sql  get_sale_detail.sql
sql/sale/: add_sale.sql  delete_sale.sql  get_sale.sql  update_sale.sql
sql/util/: get_dict.sql  validate_dict.sql
src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  test.html
src/client/: client.rs
src/config/: config.rs
src/db/: basic.rs  db.rs  drug.rs  medicine.rs  mod.rs  purchase.rs  purchase_detail.rs  sale.rs
src/front/: mod.rs  purchase.rs  sale.rs
src/handlers/: basic.rs  drug.rs  handlers.rs  medicine.rs  mod.rs  purchase.rs  sale.rs
src/models/: broth_song.rs  classification.rs  drug.rs  inventory.rs  mod.rs  purchase.rs  purchase_detail.rs  sale.rs
src/models/basic/: mod.rs
src/models/drug/: aliorigin.rs  db.rs  frontend.rs  local.rs  mod.rs
src/models/medicine/: mod.rs
src/models/purchase/: purchase.rs
src/models/purchase_detail/: frontend.rs  mod.rs  purchase_detail.rs
src/models/sale/: frontend.rs  mod.rs  sale.rs
src/util/: dict.rs  mod.rs
