[package]
name = "async_pg"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
actix-cors = "0.6.2"
serde = { version = "1.0.137", features = ["derive"] }
tokio-pg-mapper = "0.2.0"
reqwest = { version = "0.11.7", features = ["json"] }
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = { version = "0.7.6", features = ["with-uuid-1", "with-time-0_3"] }
postgres-types = { version = "0.2.4", features = ["derive"] }
openssl-sys = "0.9.75"
uuid = { version = "1.1.2", features=["v4"] }
time = "0.3.0"